fix(MetaRow): adjust poster sizes and hide scrollbar

--- a/src/components/MetaRow/MetaRowPlaceholder/styles.less
+++ b/src/components/MetaRow/MetaRowPlaceholder/styles.less
@@ -58,11 +58,15 @@
         display: flex;
         flex-direction: row;
         align-items: stretch;
-        gap: 0.25rem;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
 
         .meta-item {
             flex: none;
-            width: 11rem;
+            width: 16rem;
             padding: 0.65rem;
 
             .poster-container {
@@ -94,7 +98,7 @@
     .meta-row-placeholder-container {
         .meta-items-container {
             .meta-item {
-                width: 9rem;
+                width: 11rem;
                 padding: 0.5rem;
             }
         }
